stylesheets/main.css
.container {
	width: 80%;
	margin: 0 auto;
}



.name{
	float: left;
	padding: 10px 0;
}

nav {
	float: right;
}

nav ul {
	margin: 0;
	padding: 0;

}

nav li{
	display: inline-block;

}

nav a {
	text-decoration: none;

}

/***********************************
MENU
***********************************/
.sidebar{
	float: right;
	box-sizing: border-box;
	width:100%;
}

/**************************************
CONTACT PAGE
***************************************/
.info{
	float: left;
}

.forum{
	float: right;
	width: 500px;
}
.info,
.forum{
	clear: both;
}


@media all and (min-width: 480px){
	.name {
		display:inline-block;
		float: left;
		padding: 8px;
		clear: left;

	}

	ul.menu li {
		display:inline-block;
		float: right;
		padding: 8px;
		
	}

	
	.menu li: last child {
		border-right: none;
	}


}

